--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ path = "src/main.rs"
 [dependencies]
 axum = "0.6.3"
 chrono = { version = "0.4.23", features = ["serde"] }
+dotenv = "0.15.0"
+hyper = { version = "0.14.23", features = ["full"] }
 jsonwebtoken = "8.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
@@ -30,9 +32,11 @@ tokio = { version = "1.24.2", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
-utoipa = { versino = "2.4.2", features = ["axum_extras"] }
+utoipa = { versino = "2.4.2", features = [
+  "axum_extras",
+  "json",
+  "openapi_extensions",
+  "uuid",
+] }
 utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
 uuid = { version = "1.2.2", features = ["v4"] }
-
-[dev-dependencies]
-dotenv = "0.15.0"
