--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,11 @@ tokio = { version = "1.24.2", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.3.5", features = ["trace"] }
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.16", features = ["json"] }
+tracing-subscriber = { version = "0.3.16", features = [
+  "json",
+  "env-filter",
+  "std",
+] }
 utoipa = { versino = "2.4.2", features = [
   "axum_extras",
   "json",
