--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,10 @@ axum = "0.6.3"
 chrono = { version = "0.4.23", features = ["serde"] }
 dotenv = "0.15.0"
 fancy-regex = "0.11.0"
+futures = "0.3.25"
 hyper = { version = "0.14.23", features = ["full"] }
 jsonwebtoken = "8.2.0"
+rust-argon2 = "1.0.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 sqlx = { version = "0.6.2", features = [
