--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ fancy-regex = "0.11.0"
 futures = "0.3.25"
 hyper = { version = "0.14.23", features = ["full"] }
 jsonwebtoken = "8.2.0"
+rand = "0.8.5"
 rust-argon2 = "1.0.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
