--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tracing-subscriber = { version = "0.3.16", features = [
 ] }
 utoipa = { versino = "2.4.2", features = [
   "axum_extras",
+  "chrono",
   "json",
   "openapi_extensions",
   "uuid",
